--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>makemytrip</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>makemytrip</name>
+	<packaging>war</packaging>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
